fix icons alignment

--- a/styles/main/_icons.scss
+++ b/styles/main/_icons.scss
@@ -1,3 +1,7 @@
+.c-icon-plugin {
+  margin-right: 1em;
+}
+
 .c-deprecated-icon--danger {
   color: $red;
 }
